--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <canvas id="life_screen"></canvas>
+    <canvas id="life_screen" width="400" height="400"></canvas>
     <div class="buttons-container">
         <input type="button" value="Начать" id="start_button" />
         <input type="button" value="Пауза" id="pause_button" />
