--- a/index.html
+++ b/index.html
@@ -5,18 +5,6 @@
     <title>Life game</title>
     <link href="main.css" rel="stylesheet">
 
-    <!-- подключаем тесты -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.1.0/mocha.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.1.0/mocha.js"></script>
-    <script>
-        mocha.setup('bdd');
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/2.0.0/chai.js"></script>
-    <script>
-        var assert = chai.assert;
-    </script>
-    <!-- Конец подключения тестов -->
-
 </head>
 <body>
 
@@ -27,20 +15,12 @@
         <input type="button" value="Очистить" id="clear_button" />
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <!--<script src="script/jquery-1.7.1.min.js"></script>-->
-    <script src="script/view.js"></script>
+    <script src="script/jquery-1.7.1.min.js"></script>
+    <!--<script src="script/view.js"></script>
     <script src="script/controller.js"></script>
     <script src="script/model.js"></script>
-    <script src="script/application.js"></script>
-
-    <!-- подключаем тесты -->
-    <script src="script/test.js"></script>
-    <div id="mocha"></div>
-    <script>
-        mocha.run();
-    </script>
-    <!-- Конец подключения тестов -->
+    <script src="script/application.js"></script>-->
+    <script src="bundle.js"></script>
 
 </body>
 </html>
