--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="button" value="Очистить" id="clear_button" />
     </div>
 
+    <script src="script/canteen.min.js"></script>
     <script src="script/jquery-1.7.1.min.js"></script>
     <script src="bundle.js"></script>
 
